--- a/public/cardOrder.html
+++ b/public/cardOrder.html
@@ -693,10 +693,8 @@
                   >
                 </div>
               </div>
-              
-              <div class="conditional_inputs_first">
-                
-              </div>
+
+              <div class="conditional_inputs_first"></div>
               <h3 class="divider_h3"><span>Təhvil və Ödəniş</span></h3>
               <div class="input">
                 <label
@@ -748,7 +746,216 @@
         </div>
       </section>
 
-      <!-- Cards -->
+      <!-- FAQs -->
+
+      <section class="faq">
+        <div class="faq_container">
+          <h2>Sual cavab</h2>
+          <div class="faq_list">
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >PIN kodu necə təyin edə bilərəm? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>
+                  Kartınıza aşağı metodlarla pin kod təyin etmək&nbsp;mümkündür:
+                </p>
+                <ul>
+                  <li>Yelo mobil əlavəsindən</li>
+                  <li>Filiala yaxınlaşaraq</li>
+                </ul>
+                <p>
+                  Kartın PIN kodunu yaddan çıxıbsa, bu halda filiala
+                  yaxınlaşaraq bankın PIN Reset xidmətindən yararlanmaq olar
+                  (xidmət haqqı 3 AZN-dir).
+                </p>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >Kartımın balansını necə artıra bilərəm? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>Kart balansını aşağıdakı üsullarla artırmaq mümkündür:</p>
+                <ul>
+                  <li><strong>Yelo mobil əlavəsindən</strong></li>
+                  <li>İnternet bank xidməti ilə</li>
+                  <li>Terminaldan (E-manat, Milliön, Easy Pay)</li>
+                  <li>
+                    Onlayn (<a href="http://hesab.az" target="_blank"
+                      >hesab.az</a
+                    >, <a href="http://e-pul.az" target="_blank">e-pul.az</a>)
+                  </li>
+                  <li>Filiala yaxınlaşaraq</li>
+                </ul>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >Kart üzrə limitlər nədir? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>
+                  Kart əməliyyatlarını&nbsp;daha təhlükəsiz etmək üçüm bank
+                  əməliyyatlara limitlər təyin edir. Limitlər aşağıdakı formada
+                  olur:&nbsp;
+                </p>
+                <ul>
+                  <li><strong>Yelo mobil əlavəsindən</strong></li>
+                  <li>
+                    Bankomatda və POS-terminal vasitəsilə nağdlaşdırma limiti
+                  </li>
+                  <li>Karta mədaxil limiti</li>
+                  <li>
+                    POS-terminal ödənişlərinə tətbiq olunan limit (təmaslı və
+                    təmassız)
+                  </li>
+                  <li>Onlayn ödənişlər zamanı tətbiq olunan limit</li>
+                  <li>Card to Card -a tətbiq olunan limit</li>
+                </ul>
+                <p>
+                  Bankın cari tariflərində risk zonasına daxil olan ölkələrdə
+                  dələduzluq risklərinin daha yüksək olmasını nəzərə alaraq,
+                  həmin ölkələrdə ödəniş kartları ilə əməliyyatların aparılması
+                  üzrə bank tərəfindən daha aşağı limitlər tətbiq olunub.
+                </p>
+                <p>
+                  <a
+                    href="https://www.yelo.az/site/assets/files/1094/light_limit_aze.pdf"
+                    target="_blank"
+                    >Limitlər&nbsp;(pdf)</a
+                  >
+                </p>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >Kartım itib və ya oğurlanıbsa nə etməliyəm? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>
+                  Kart üzrə əməliyyatları daha təhlükəsiz etmək üçün bank
+                  kartlar üzrə aparılan əməliyyatlara limitlər tətbiq edir. Əgər
+                  ödəniş kartı itib və ya oğurlanıbsa, vəsaitin təhlükəsizliyi
+                  və öz rahatlığınız üçün kartı bloklaşdırılmağa tövsiyyə
+                  edirik. Kartı aşağıdakı üsullarla bloklaşdırmaq mümkündür:
+                </p>
+                <ul>
+                  <li>Yelo mobil əlavəsindən</li>
+                  <li>Məlumat mərkəzi ilə əlaqə saxlayaraq (981)</li>
+                  <li>
+                    <a href="/az/individuals/atms-and-branches/" target="_blank"
+                      >Filiala</a
+                    >
+                    yaxınlaşaraq
+                  </li>
+                  <li>
+                    24/7 fəaliyyət göstərən Azərikard Müştəri Xidmətləri Mərkəzi
+                    ilə əlaqə saxlayaraq (194; ancaq beynəxalq zənglər üçün:
+                    +99450 225 28 00)
+                  </li>
+                </ul>
+                <p>
+                  Əgər itirilmiş və ya oğurlanmış kart bloka salınıb, lakin
+                  həmin kartdan artıq əməliyyatlar aparılıbsa, bu halda banka
+                  ərizə ilə müraciət etmək lazımdır.&nbsp;Chargeback xidməti
+                  vasitəsilə məsələ araşdırılacaq&nbsp;və mümkün olduğu
+                  halda&nbsp;vəsait geri qaytarılacaq.
+                </p>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >PIN kodumu 3 dəfə səhv daxil etdim və kartım bloka düşdü. Nə
+                  etməliyəm? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>
+                  Kart PIN kodu 3 dəfə düzgün daxil etmədiyinə görə bloka
+                  salınıbsa, aşağıdakı üsullarla blokdan çıxarmaq mümkündür:
+                </p>
+                <ul>
+                  <li>Məlumat mərkəzi ilə əlaqə saxlayaraq (981)</li>
+                  <li>
+                    <a href="/az/individuals/atms-and-branches/" target="_blank"
+                      >Filiala&nbsp;</a
+                    >yaxınlaşaraq
+                  </li>
+                  <li>
+                    24/7 fəaliyyət göstərən Azərikard Müştəri Xidmətləri Mərkəzi
+                    ilə əlaqə saxlayaraq (194; ancaq beynəxalq zənglər üçün: 012
+                    598 46 97)
+                  </li>
+                </ul>
+                <p>
+                  Kartın PIN kodunu yaddan çıxıbsa, bu halda filiala
+                  yaxınlaşaraq bankın PIN Reset xidmətindən yararlanmaq olar
+                  (xidmət haqqı 3 AZN-dir).
+                </p>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >Kartımın PIN kodunu unutmuşam. Bu halda nə edim? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>
+                  PIN kodunu təyin etmək üçün istənilən &nbsp;filialdaki
+                  POS-terminalda
+                  <a href="#">PIN Reset </a>xidmətindən istifadə etmək
+                  olar.&nbsp;&nbsp;PIN Reset xidmətindən istifadə aşağıdakı
+                  şəkildə həyata keçirilir:
+                </p>
+                <ul>
+                  <li><strong>Yelo mobil əlavəsindən</strong></li>
+                  <li>
+                    PIN kodun bərpa olunması üçün xüsusi ərizə forması
+                    doldurulur
+                  </li>
+                  <li>Müraciətə əsasən köhnə PIN kod silinir</li>
+                  <li>
+                    Əməliyyatçı tərəfindən təqdim olunan POS-terminal vasitəsilə
+                    yeni PIN kod yaradır
+                  </li>
+                </ul>
+                <p>PIN Reset üzrə xidmət haqqı 3 AZN təşkil edir.</p>
+              </div>
+            </article>
+            <article>
+              <h3>
+                <a href="javascript:void(0);"
+                  >Kartımı necə bloklaşdıra bilərəm? <em></em
+                ></a>
+              </h3>
+              <div class="list_item_inner">
+                <p>Kartı aşağıdakı üsullarla bloklaşdırmaq mümkündür:</p>
+                <ul>
+                  <li><strong>Yelo mobil əlavəsindən</strong></li>
+                  <li>Məlumat mərkəzi ilə əlaqə saxlayaraq (981)</li>
+                  <li>Filiala yaxınlaşaraq</li>
+                  <li>
+                    24/7 fəaliyyət göstərən Azərikard Müştəri Xidmətləri Mərkəzi
+                    &nbsp;(194; 012 598 46 97; ancaq beynəxalq zənglər üçün -
+                    050 225 &nbsp;28 00) ilə əlaqə saxlayaraq
+                  </li>
+                </ul>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="p_cards">
