added card services section

--- a/public/cardOrder.html
+++ b/public/cardOrder.html
@@ -8,10 +8,6 @@
       href="../public/images/apple-touch-icon-152x152.webp"
       type="image/x-icon"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
     <link rel="stylesheet" href="../src/scss/style.css" />
     <title>
       Pulsuz Debet Kart Sifarisi: Qalıq məbləğə faiz, Ödənişdən cashback qazan
@@ -953,6 +949,269 @@
                 </ul>
               </div>
             </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Card Services -->
+      <section class="card_services">
+        <div class="container">
+          <div class="card_services_heading">
+            <h4>Kart xidmətləri</h4>
+            <div class="pagination_btns">
+              <div
+                class="prev_btn"
+                style="background-image: url(../public/images/prev_btn.svg)"
+                data-direction="prev"
+              ></div>
+              <div
+                class="next_btn"
+                style="background-image: url(../public/images/next_btn.svg)"
+                data-direction="next"
+              ></div>
+            </div>
+          </div>
+        </div>
+        <div class="services_slider">
+          <div class="services">
+            <div class="service first_one"></div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Google Pay</b>
+                    <p>
+                      Google Pay, Google şirkəti tərəfindən yaradılan və Android
+                      əməliyyat sistemli cihazlarda keçərli olan çevik, rahat və
+                      təhlükəsiz ödəmə üsuludur.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="background-image: url(../public/images/gpay3.webp)"
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Apple Pay</b>
+                    <p>
+                      Yelo kart sahibləri Apple Pay vasitəsilə alış-verişlərini
+                      çox rahat və təmassız şəkildə həyata keçirə bilərlər.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="background-image: url(../public/images/apple-pay.webp)"
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Onlayn PIN SET</b>
+                    <p>
+                      Yeni Yelo kart sifariş vermisən və PIN (ŞEN) kodu onlayn
+                      təyin etmək istəyirsən? O zaman PIN Set web xidmətimizdən
+                      faydalana bilərsən.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="background-image: url(../public/images/pin-kod-3.webp)"
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Cashback</b>
+                    <p>
+                      Yelo kart ilə partnyor şəbəkəmizdə etdiyin ödənişlərə görə
+                      partnyordan asılı olaraq 30%-dək cashback əldə edə
+                      bilərsən.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/cashback-pic.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>PIN Reset</b>
+                    <p>
+                      Bu xidmət kartının PIN kodunu unudanlar üçün çox
+                      faydalıdır.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="background-image: url(../public/images/pin-reset.webp)"
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>PIN kodun dəyişdirilməsi</b>
+                    <p>
+                      Əgər kartının PIN kodunu dəyişdirmək istəyirsənsə,
+                      istənilən Yelo Bank ATM-ə yaxınlaşa bilərsən.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/pinchange-img.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>SMS məlumatlandırma</b>
+                    <p>
+                      Bu xidmət kart sahiblərinə mobil nömrə vasitəsilə
+                      hesablarına nəzarət etmək üçün əla fürsət yaradır.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="background-image: url(../public/images/sms-not.webp)"
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Premium kart xidmətləri</b>
+                    <p>
+                      Yelo Premium Visa kartınla hər yerdə hər zaman öz yüksək
+                      statusunu vurğula. Böyük üstünlükləri olan bu kart
+                      həyatının bir parçasına çevriləcək.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/premium-xidmetler-1.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>3D secure</b>
+                    <p>
+                      Yelo Bank internet ödənişlərin təhlükəsiz həyata
+                      keçirilməsini təmin etmək üçün 3D Secure xidmətini təqdim
+                      edir. Xidmət ödənişsizdir.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/3d-secure-img.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Cash by code</b>
+                    <p>
+                      Bu xidmət Yelo Bank kart sahiblərinə bank kartı olmayan
+                      şəxslərə günün istənilən vaxtı pul vəsaiti göndərmək
+                      imkanı verir.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/cash-by-code-fin.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>Card to Card</b>
+                    <p>
+                      Bu xidmət kart sahiblərinə həm Yelo App, həm də ATM
+                      şəbəkəsi vasitəsilə bir kartdan digər karta tez və rahat
+                      köçürmə imkanı verir.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/card-to-card-img.webp);
+                  "
+                ></div>
+              </div>
+            </div>
+            <div class="service">
+              <div class="service_inner">
+                <div class="ser_desc">
+                  <div class="ser_desc_inner">
+                    <b>ATM PIN SET</b>
+                    <p>
+                      Bu xidmət vasitəsilə ATM-dən PIN kodu təyin etmək çox
+                      asandır.
+                    </p>
+                  </div>
+                  <a href="javascript:void(0)" class="arr-btn">Daha ətraflı</a>
+                </div>
+                <div
+                  class="ser_image"
+                  style="
+                    background-image: url(../public/images/atm_pinset.webp);
+                  "
+                ></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
