adding card orderes table

--- a/public/cardOrder.html
+++ b/public/cardOrder.html
@@ -103,12 +103,16 @@
       </div>
     </div>
 
-    <div class="darkness"></div>
-    
-    <div class="services_modal">
+    <div class="darkness "></div>
+
+    <div class="services_modal ">
       <div class="s_modal_content">
         <div class="modal_nav">
-          <a href="javascript:void(0)" class="close_m"></a>
+          <a
+            href="javascript:void(0)"
+            class="close_m"
+            style="background-image: url(../public/images/close_black.svg)"
+          ></a>
         </div>
         <div class="c_wrap">
           <div class="c_left">
@@ -300,7 +304,7 @@
                   Yeni Yelo kart sifariş vermisən və PIN (ŞEN) kodu onlayn təyin
                   etmək istəyirsən? O zaman PIN Set web xidmətimizdən faydalana
                   bilərsən. Bunun üçün xidmət səhifəsinə
-                  <strong><a href="javascript:void(0)" >daxil ol</a> </strong>və
+                  <strong><a href="javascript:void(0)">daxil ol</a> </strong>və
                   aşağıda yazılmış addımlarla get: &nbsp;
                 </p>
                 <ul>
@@ -400,9 +404,9 @@
               <div class="c_m_text">
                 <p>
                   Əgər kartının PIN kodunu dəyişdirmək istəyirsənsə, istənilən
-                  <a href="javascript:void(0)">Yelo Bank ATM</a>-ə yaxınlaşa bilərsən. Yeni şifrə
-                  4 rəqəmdən ibarət olmalıdır və istədiyin qədər dəyişə
-                  bilərsən. Dəyişmək isə çox rahatdır:
+                  <a href="javascript:void(0)">Yelo Bank ATM</a>-ə yaxınlaşa
+                  bilərsən. Yeni şifrə 4 rəqəmdən ibarət olmalıdır və istədiyin
+                  qədər dəyişə bilərsən. Dəyişmək isə çox rahatdır:
                 </p>
                 <ul>
                   <li>Kartı ATM-ə daxil edib köhnə şifrəni yığ</li>
@@ -434,7 +438,6 @@
               <div class="c_m_cover">
                 <div class="c_m_left">
                   <div class="c_m_desc">
-                    <p></p>
                     <b>SMS məlumatlandırma</b>
                   </div>
                 </div>
@@ -459,9 +462,9 @@
                 <ul>
                   <li>
                     Kartı
-                    <a href="javascript:void(0)">Yelo Bank ATM</a>-nə daxil edərək əsas menyuda
-                    “Xidmətlər” bölməsini, sonra isə “SMS NOTIFICATIONS”
-                    düyməsini seç;
+                    <a href="javascript:void(0)">Yelo Bank ATM</a>-nə daxil
+                    edərək əsas menyuda “Xidmətlər” bölməsini, sonra isə “SMS
+                    NOTIFICATIONS” düyməsini seç;
                   </li>
                   <li>Daha sonra iki dəfə öz mobil nömrəni daxil et;</li>
                   <li>
@@ -475,9 +478,16 @@
             <div class="service_modal_item" data-service-id="10910">
               <div class="c_m_cover">
                 <div class="c_m_left">
-                  <b>Premium kart xidmətləri</b>
+                  <div class="c_m_desc">
+                    <b>Premium kart xidmətləri</b>
+                  </div>
                 </div>
-                <div class="c_m_image" style="background-image: url(../public/images/premium-xidmetler-1.webp)"></div>
+                <div
+                  class="c_m_image"
+                  style="
+                    background-image: url(../public/images/premium-xidmetler-1.webp);
+                  "
+                ></div>
               </div>
               <div class="c_m_text">
                 <p>
@@ -485,29 +495,21 @@
                   statusunu vurğula. Böyük üstünlükləri olan bu kart həyatının
                   bir parçasına çevriləcək.<br />
                   <br />
-                  -&nbsp; &nbsp;&nbsp;<a
-                    href="javascript:void(0)"
+                  -&nbsp; &nbsp;&nbsp;<a href="javascript:void(0)"
                     >Hava Limanına pulsuz transfer</a
                   ><br />
-                  -&nbsp;&nbsp; &nbsp;<a
-                    href="javascript:void(0)"
+                  -&nbsp;&nbsp; &nbsp;<a href="javascript:void(0)"
                     >Pulsuz Fast Track keçidləri</a
                   ><br />
-                  -&nbsp; &nbsp;&nbsp;<a
-                    href="javascript:void(0)"
+                  -&nbsp; &nbsp;&nbsp;<a href="javascript:void(0)"
                     >Fast&nbsp;Line xidməti</a
                   ><br />
-                  -&nbsp;&nbsp; &nbsp;<a
-                    href="javascript:void(0)"
+                  -&nbsp;&nbsp; &nbsp;<a href="javascript:void(0)"
                     >Premium Lounge Key</a
                   ><br />
                   -&nbsp;&nbsp;&nbsp;
-                  <a
-                    href="javascript:void(0)"
-                    >Azercell Rouminq</a
-                  ><br />
-                  -&nbsp;&nbsp; &nbsp;<a
-                    href="javascript:void(0)"
+                  <a href="javascript:void(0)">Azercell Rouminq</a><br />
+                  -&nbsp;&nbsp; &nbsp;<a href="javascript:void(0)"
                     >Sağlam Ailə mərkəzlərində xüsusi təkliflər</a
                   ><br />
                   <br />
@@ -530,7 +532,9 @@
             <div class="service_modal_item" data-service-id="1107">
               <div class="c_m_cover">
                 <div class="c_m_left">
-                  <b>3D secure</b>
+                  <div class="c_m_desc">
+                    <b>3D secure</b>
+                  </div>
                 </div>
                 <div
                   class="c_m_image"
@@ -568,7 +572,9 @@
             <div class="service_modal_item" data-service-id="1108">
               <div class="c_m_cover">
                 <div class="c_m_left">
-                  <b>Cash by code</b>
+                  <div class="c_m_desc">
+                    <b>Cash by code</b>
+                  </div>
                 </div>
                 <div
                   class="c_m_image"
@@ -645,7 +651,9 @@
             <div class="service_modal_item" data-service-id="1109">
               <div class="c_m_cover">
                 <div class="c_m_left">
-                  <b>Card to Card</b>
+                  <div class="c_m_desc">
+                    <b>Card to Card</b>
+                  </div>
                 </div>
                 <div
                   class="c_m_image"
@@ -694,7 +702,9 @@
             <div class="service_modal_item" data-service-id="6706">
               <div class="c_m_cover">
                 <div class="c_m_left">
-                  <b>ATM PIN SET</b>
+                  <div class="c_m_desc">
+                    <b>ATM PIN SET</b>
+                  </div>
                 </div>
                 <div
                   class="c_m_image"
@@ -1266,6 +1276,7 @@
       <!-- Card Order Form -->
 
       <section class="card_order_form">
+        
         <div class="form_container">
           <div class="section_head">
             <h2>Yelo Light</h2>
@@ -1666,8 +1677,8 @@
         </div>
         <div class="services_slider">
           <div class="services">
-            <div class="service first_one"></div>
-            <div class="service">
+            <div class="service first_one" data-service-id=""></div>
+            <div class="service" data-service-id="8597">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1686,7 +1697,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="10906">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1704,7 +1715,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="6210">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1723,7 +1734,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1163">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1744,7 +1755,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1104">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1762,7 +1773,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1105">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1782,7 +1793,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1106">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1800,7 +1811,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="10910">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1821,7 +1832,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1107">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1842,7 +1853,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1108">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1863,7 +1874,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="1109">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
@@ -1884,7 +1895,7 @@
                 ></div>
               </div>
             </div>
-            <div class="service">
+            <div class="service" data-service-id="6706">
               <div class="service_inner">
                 <div class="ser_desc">
                   <div class="ser_desc_inner">
