Added ordererstable page and started new page called cashback

--- a/public/deposits.html
+++ b/public/deposits.html
@@ -9,6 +9,10 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <title>
       Əmanətlər - Yelo Depozit ilə Yüksək Gəlirli Əmanət Faizləri
     </title>
