--- a/public/OrderersTable.html
+++ b/public/OrderersTable.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../src/scss/style.css" />
-    <title>Bank Xəbərləri - Son Xəbərlər</title>
+    <title>Pulsuz Debet Kart Sifaris edenlerin siyahisi</title>
   </head>
 
   <body>
@@ -101,32 +101,6 @@
       </div>
     </div>
 
-    <div class="news-modal ">
-      <div class="modal">
-        <div class="modal-inner">
-          <div class="close-news-modal">
-            <button type="button" class="close-button">
-              <img src="images/close.svg" alt="" class="close_btn" />
-            </button>
-          </div>
-          <div class="modal-content">
-            <div class="content-title">
-              <h2>Xəbər Əlavə et</h2>
-            </div>
-            <div class="content-text">
-              <form novalidate id="addNewsForm">
-                <div class="group">
-                  <label for="newsname">Xəbər başlığı</label>
-                  <textarea name="title" id="newsname" placeholder="Bir şey yazın..."></textarea>
-                </div>
-                <button type="submit" class="add-button">Əlavə et</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <header class="news_page">
       <div class="header-top">
         <div class="wrapper">
@@ -205,7 +179,7 @@
               <a href="javascript:void(0)" class="message">
                 <img src="images/message_trigger.svg" alt="message" />
               </a>
-              <a href="#" class="internet-bank" style="margin-right: 0;">
+              <a href="#" class="internet-bank" style="margin-right: 0">
                 <img src="images/o_banking.svg" alt="o_banking" />
                 <span>İnternet-bank</span>
               </a>
@@ -420,21 +394,36 @@
     </header>
 
     <main>
-      <section class="news">
+      <section class="s_title orderersTable">
         <div class="container">
-          <div class="common-title">
-            <h1>Xəbərlər</h1>
-            <button class="add-news">Xəbər Əlavə et</button>
+          <div class="page_title">
+            <h1>Kart Sifariş edənlərin siyahısı</h1>
           </div>
-          <div class="context">
-            <ul class="news-list-total"></ul>
-            <div class="loader">Yüklənir<span class="ellipsis">...</span></div>
-            <div class="news-link">
-              <a href="javascript:void(0);" id="more-news" class="more-details"
-                >Daha çox</a
-              >
-            </div>
-          </div>
+        </div>
+        <div class="context">
+          <table
+            id="myTable"
+            class="table table-striped table-borderless"
+            style="width: 100%"
+          >
+            <thead>
+              <tr>
+                <th>Ad Soyad</th>
+                <th>Mobil nömrə</th>
+                <th>FIN</th>
+                <th>Kart növü</th>
+                <th>Valyuta</th>
+                <th>Ödəniş üsulu</th>
+                <th>Məxfi söz</th>
+                <th>Əldə etmə üsulu</th>
+                <th>Şəhər</th>
+                <th>Çatdırılma ünvanı</th>
+                <th>Filial</th>
+                <th>Ödəniş vasitəsi</th>
+              </tr>
+            </thead>
+            <tbody id="tablebody"></tbody>
+          </table>
         </div>
       </section>
     </main>
@@ -651,8 +640,7 @@
         </div>
       </div>
     </footer>
-
     <script src="../src/js/main.js"></script>
-    <script src="../src/js/news.js"></script>
+    <script src="../src/js/orderersTable.js"></script>
   </body>
 </html>
