--- a/public/loans.html
+++ b/public/loans.html
@@ -11,6 +11,10 @@
       href="../public/images/apple-touch-icon-152x152.webp"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="../src/scss/style.css" />
   </head>
 
